redo start animation once again

--- a/_includes/home-circles.html
+++ b/_includes/home-circles.html
@@ -9,12 +9,12 @@
     stroke-miterlimit="10"
     stroke-width="10"
     opacity="0"
-    data-attr-on-enter="
-      screen0:cx=300,cy=300,r=50,opacity=0
-      screen1:cx=300,cy=254,r=50,opacity=1
-      screen2:cx=306.5,cy=305,r=47.5,opacity=1
-      screen3:cx=300,cy=254,r=50,opacity=0
-      screen4:cx=381.5,cy=330,r=138.5,opacity=1
+    data-keyframes="
+      0:cx=300,cy=300,r=50,opacity=0.5
+      0.2:cx=300,cy=254,r=50,opacity=1
+      0.4:cx=306.5,cy=305,r=47.5,opacity=1
+      0.6:cx=300,cy=254,r=50,opacity=0
+      0.8:cx=381.5,cy=330,r=138.5,opacity=1
     "
   />
   <circle
@@ -27,12 +27,12 @@
     stroke-miterlimit="10"
     stroke-width="10"
     opacity="0"
-    data-attr-on-enter="
-      screen0:cx=300,cy=300,r=50,opacity=0
-      screen1:cx=251.5,cy=289,r=50,opacity=1
-      screen2:cx=336.5,cy=196,r=111.5,opacity=1
-      screen3:cx=206.5,cy=221,r=55.5,opacity=1
-      screen4:cx=263.5,cy=256,r=36.5,opacity=1
+    data-keyframes="
+      0:cx=300,cy=300,r=50,opacity=0
+      0.2:cx=251.5,cy=289,r=50,opacity=1
+      0.4:cx=336.5,cy=196,r=111.5,opacity=1
+      0.6:cx=206.5,cy=221,r=55.5,opacity=1
+      0.8:cx=263.5,cy=256,r=36.5,opacity=1
     "
   />
   <circle
@@ -45,12 +45,12 @@
     stroke-miterlimit="10"
     stroke-width="10"
     opacity="0"
-    data-attr-on-enter="
-      screen0:cx=300,cy=300,r=50,opacity=0
-      screen1:cx=269.5,cy=345,r=50,opacity=1
-      screen2:cx=184.6,cy=384.9,r=140.5,opacity=1
-      screen3:cx=193.9,cy=284.36,r=39.5,opacity=1
-      screen4:cx=240.5,cy=292,r=39.5,opacity=1
+    data-keyframes="
+      0:cx=300,cy=300,r=50,opacity=0
+      0.2:cx=269.5,cy=345,r=50,opacity=1
+      0.4:cx=184.6,cy=384.9,r=140.5,opacity=1
+      0.6:cx=193.9,cy=284.36,r=39.5,opacity=1
+      0.8:cx=240.5,cy=292,r=39.5,opacity=1
     "
   />
   <circle
@@ -63,12 +63,12 @@
     stroke-miterlimit="10"
     stroke-width="10"
     opacity="0"
-    data-attr-on-enter="
-      screen0:cx=300,cy=300,r=50,opacity=0
-      screen1:cx=348.5,cy=289,r=50,opacity=1
-      screen2:cx=348.5,cy=289,r=50,opacity=0
-      screen3:cx=354.5,cy=284,r=161.5,opacity=1
-      screen4:cx=348.5,cy=289,r=50,opacity=0
+    data-keyframes="
+      0:cx=300,cy=300,r=50,opacity=0
+      0.2:cx=348.5,cy=289,r=50,opacity=1
+      0.4:cx=348.5,cy=289,r=50,opacity=0
+      0.6:cx=354.5,cy=284,r=161.5,opacity=1
+      0.8:cx=348.5,cy=289,r=50,opacity=0
     "
   />
   <circle
@@ -81,12 +81,12 @@
     stroke-miterlimit="10"
     stroke-width="10"
     opacity="0"
-    data-attr-on-enter="
-      screen0:cx=300,cy=300,r=50,opacity=0
-      screen1:cx=329.5,cy=346,r=50,opacity=1
-      screen2:cx=324.2,cy=378.65,r=79.5,opacity=1
-      screen3:cx=329.5,cy=346,r=50,opacity=0
-      screen4:cx=262.5,cy=382,r=87.5,opacity=1
+    data-keyframes="
+      0:cx=300,cy=300,r=50,opacity=0
+      0.2:cx=329.5,cy=346,r=50,opacity=1
+      0.4:cx=324.2,cy=378.65,r=79.5,opacity=1
+      0.6:cx=329.5,cy=346,r=50,opacity=0
+      0.8:cx=262.5,cy=382,r=87.5,opacity=1
     "
   />
   <circle
@@ -99,12 +99,12 @@
     stroke-miterlimit="10"
     stroke-width="10"
     opacity="1"
-    data-attr-on-enter="
-      screen0:opacity=1
-      screen1:opacity=0
-      screen2:opacity=0
-      screen3:opacity=0
-      screen4:opacity=0
+    data-keyframes="
+      0:opacity=1
+      0.2:opacity=0
+      0.4:opacity=0
+      0.6:opacity=0
+      0.8:opacity=0
     "
   />
   <g
@@ -112,12 +112,12 @@
     transform="translate(152.5 402)"
     opacity="0"
     fill="#eec000"
-    data-attr-on-enter="
-      screen0:opacity=0,translateX=152.5,translateY=402
-      screen1:opacity=1,translateX=152.5,translateY=402
-      screen2:opacity=1,translateX=77.5,translateY=455
-      screen3:opacity=1,translateX=84.5,translateY=334
-      screen4:opacity=1,translateX=100,translateY=288
+    data-keyframes="
+      0:opacity=0,translateX=152.5,translateY=402
+      0.2:opacity=1,translateX=152.5,translateY=402
+      0.4:opacity=1,translateX=77.5,translateY=455
+      0.6:opacity=1,translateX=84.5,translateY=334
+      0.8:opacity=1,translateX=100,translateY=288
     "
   >
   <path id="R" class="st1" d="M20,12.8L18.2,9h-1.1v3.8h-1.3V3.2h2.5C19.8,3,21,4,21.2,5.4c0,0.2,0,0.4,0,0.5
@@ -142,12 +142,12 @@
     transform="translate(90 263)"
     opacity="0"
     fill="#5aa700"
-    data-attr-on-enter="
-      screen0:opacity=0,translateX=90,translateY=263
-      screen1:opacity=1,translateX=90,translateY=263
-      screen2:opacity=1,translateX=130,translateY=119
-      screen3:opacity=1,translateX=145,translateY=130
-      screen4:opacity=1,translateX=172.5,translateY=190
+    data-keyframes="
+      0:opacity=0,translateX=90,translateY=263
+      0.2:opacity=1,translateX=90,translateY=263
+      0.4:opacity=1,translateX=130,translateY=119
+      0.6:opacity=1,translateX=145,translateY=130
+      0.8:opacity=1,translateX=172.5,translateY=190
     "
   >
     <path id="C" class="st1" d="M10.3,12.9c-2,0-3.1-1.4-3.1-4.9s1.4-4.9,3.2-4.9C11.7,3,12.9,4,13,5.3c0,0.1,0,0.2,0,0.3h-1.3
@@ -175,12 +175,12 @@
     transform="translate(340 402)"
     opacity="0"
     fill="#813c96"
-    data-attr-on-enter="
-      screen0:opacity=0,translateX=340,translateY=402
-      screen1:opacity=1,translateX=340,translateY=402
-      screen2:opacity=1,translateX=360,translateY=452
-      screen3:opacity=0,translateX=340,translateY=402
-      screen4:opacity=1,translateX=136.5,translateY=464
+    data-keyframes="
+      0:opacity=0,translateX=340,translateY=402
+      0.2:opacity=1,translateX=340,translateY=402
+      0.4:opacity=1,translateX=360,translateY=452
+      0.6:opacity=0,translateX=340,translateY=402
+      0.8:opacity=1,translateX=136.5,translateY=464
     "
   >
     <path id="D" class="st1" d="M28,12.8h-2.2V3.2h2.4c2.4,0,3.3,1.4,3.3,4.8S30.4,12.8,28,12.8z M27.9,4.3H27v7.4h0.9
@@ -200,12 +200,12 @@
     transform="translate(251.24 175)"
     opacity="0"
     fill="#ea1e5c"
-    data-attr-on-enter="
-      screen0:opacity=0,translateX=251.24,translateY=175
-      screen1:opacity=1,translateX=251.24,translateY=175
-      screen2:opacity=1,translateX=272.24,translateY=225
-      screen3:opacity=0,translateX=251.24,translateY=175
-      screen4:opacity=1,translateX=390,translateY=370
+    data-keyframes="
+      0:opacity=0,translateX=251.24,translateY=175
+      0.2:opacity=1,translateX=251.24,translateY=175
+      0.4:opacity=1,translateX=272.24,translateY=225
+      0.6:opacity=0,translateX=251.24,translateY=175
+      0.8:opacity=1,translateX=390,translateY=370
     "
   >
     <path id="E" class="st1" d="M3.2,12.3V2.7h4.7v1.1H4.5v2.9h3.2v1.1H4.5v3.4h3.6v1.1H3.2z"/>
@@ -234,12 +234,12 @@
     transform="translate(407.5 263)"
     opacity="0"
     fill="#1e4c62"
-    data-attr-on-enter="
-      screen0:opacity=0,translateX=407.5,translateY=263
-      screen1:opacity=1,translateX=407.5,translateY=263
-      screen2:opacity=0,translateX=407.5,translateY=263
-      screen3:opacity=1,translateX=310,translateY=416
-      screen4:opacity=0,translateX=407.5,translateY=263
+    data-keyframes="
+      0:opacity=0,translateX=407.5,translateY=263
+      0.2:opacity=1,translateX=407.5,translateY=263
+      0.4:opacity=0,translateX=407.5,translateY=263
+      0.6:opacity=1,translateX=310,translateY=416
+      0.8:opacity=0,translateX=407.5,translateY=263
     "
   >
     <path id="T" class="st1" d="M20.2,4.3v8.5h-1.3V4.3h-2.3V3.2h6v1.1H20.2z"/>
