--- a/_includes/approach-image.html
+++ b/_includes/approach-image.html
@@ -2,25 +2,27 @@
   class="width-full"
   viewbox="0 0 1300 920"
   xmlns="http://www.w3.org/2000/svg"
-  style="transform-origin:0 100%"
+  style="transform-origin:0 100%;max-height: 80vh;"
   data-only-animate-if-matches="(max-width: 40em)"
-  data-attr-on-enter="
-    screen1:translateX=0,translateY=-50,scale=1
-    screen2:translateX=0,translateY=0,scale=2
-    screen3:translateX=-100,translateY=70,scale=2
-    screen4:translateX=-200,translateY=120,scale=2
-    screen5:translateX=-300,translateY=170,scale=2
-    screen6:translateX=0,translateY=-50,scale=1
+  data-keyframes="
+    0:translateX=0,translateY=-50,scale=1
+    0.133:translateX=0,translateY=-50,scale=1
+    0.266:translateX=0,translateY=0,scale=2
+    0.4:translateX=-100,translateY=70,scale=2
+    0.5333:translateX=-200,translateY=120,scale=2
+    0.6666:translateX=-300,translateY=170,scale=2
+    0.8:translateX=0,translateY=-50,scale=1
   "
 >
   <g
-    data-attr-on-enter="
-      screen1:opacity=1
-      screen2:opacity=0.2
-      screen3:opacity=0.2
-      screen4:opacity=0.2
-      screen5:opacity=1
-      screen6:opacity=1
+    data-keyframes="
+      0:opacity=0
+      0.133:opacity=1
+      0.266:opacity=0.2
+      0.4:opacity=0.2
+      0.5333:opacity=0.2
+      0.6666:opacity=1
+      0.8:opacity=1
       "
     data-name="05_solution" id="_05_solution"
   >
@@ -49,13 +51,14 @@
   <g
     data-name="04_implementation"
     id="_04_implementation"
-    data-attr-on-enter="
-      screen1:opacity=1
-      screen2:opacity=0.2
-      screen3:opacity=0.2
-      screen4:opacity=0.2
-      screen5:opacity=1
-      screen6:opacity=0.2
+    data-keyframes="
+      0:opacity=0
+      0.133:opacity=1
+      0.266:opacity=0.2
+      0.4:opacity=0.2
+      0.5333:opacity=0.2
+      0.6666:opacity=1
+      0.8:opacity=0.2
     "
   >
     <g>
@@ -106,13 +109,14 @@
   <g
     data-name="03_concept_design"
     id="_03_concept_design"
-    data-attr-on-enter="
-      screen1:opacity=1
-      screen2:opacity=0.2
-      screen3:opacity=0.2
-      screen4:opacity=1
-      screen5:opacity=0.2
-      screen6:opacity=0.2
+    data-keyframes="
+      0:opacity=0
+      0.133:opacity=1
+      0.266:opacity=0.2
+      0.4:opacity=0.2
+      0.5333:opacity=1
+      0.6666:opacity=0.2
+      0.8:opacity=0.2
     "
   >
     <path d="M671.63,415.21c2.41,2.35,4.91,4.82,7.47,7.38l2.8,2.5c-3.5-3.5-7-7-10.41-10.35v.33Z" fill="none"/>
@@ -187,13 +191,14 @@
   <g
     data-name="02_synthesis"
     id="_02_synthesis"
-    data-attr-on-enter="
-      screen1:opacity=1
-      screen2:opacity=0.2
-      screen3:opacity=1
-      screen4:opacity=0.2
-      screen5:opacity=0.2
-      screen6:opacity=0.2
+    data-keyframes="
+      0:opacity=0
+      0.133:opacity=1
+      0.266:opacity=0.2
+      0.4:opacity=1
+      0.5333:opacity=0.2
+      0.6666:opacity=0.2
+      0.8:opacity=0.2
     "
   >
     <path d="M525.79,585.82a2.41,2.41,0,0,1-.24.73c.77.34,1.52.72,2.27,1.11Z" fill="none"/>
@@ -242,13 +247,14 @@
   <g
     data-name="01_comprehensive_view"
     id="_01_comprehensive_view"
-    data-attr-on-enter="
-      screen1:opacity=1
-      screen2:opacity=1
-      screen3:opacity=0.2
-      screen4:opacity=0.2
-      screen5:opacity=0.2
-      screen6:opacity=0.2
+    data-keyframes="
+      0:opacity=0
+      0.133:opacity=1
+      0.266:opacity=1
+      0.4:opacity=0.2
+      0.5333:opacity=0.2
+      0.6666:opacity=0.2
+      0.8:opacity=0.2
     "
   >
     <path d="M516.26,752.71a5.82,5.82,0,0,0-.61-1.54,25.89,25.89,0,0,0-3-4.17c-1.81-2.19-3.75-4.27-5.71-6.32-6.87-7.17-14.1-14-21.32-20.82a3.36,3.36,0,0,0,4-3.64,5.19,5.19,0,0,0-.25-1.17,14,14,0,0,0-1.79-3.31,60.79,60.79,0,0,0-4.54-5.71c-6.95-8-14.61-15.36-22.21-22.7a2.93,2.93,0,0,0,1.94-3,7.74,7.74,0,0,0-1.64-3.38,51.59,51.59,0,0,0-4.78-5.55c-2.77-2.9-5.67-5.68-8.59-8.44-4.29-4.06-8.66-8-13-12q-9.09-8.25-18.27-16.4-10.87-9.71-21.74-19.4-10.49-9.37-20.84-18.89c-6.4-5.91-12.76-11.87-18.92-18-4.12-4.12-8.21-8.31-11.91-12.81a27.47,27.47,0,0,1-3.91-5.62,15,15,0,0,1,2.18,1.22,54.48,54.48,0,0,1,8.49,6.88c2.89,2.83,5.82,5.61,8.76,8.38,3.54,3.32,7.15,6.56,10.68,9.89s7.13,7.17,10.66,10.77c7.11,7.27,14.17,14.59,21.28,21.87,5.18,5.29,10.36,10.58,15.67,15.74,3.25,3.16,6.53,6.34,10.07,9.17,1.62,1.29,3.56,3,5.67,3.37a2.78,2.78,0,0,0,3.33-3.17,5.74,5.74,0,0,0-.82-1.84,38.12,38.12,0,0,0-5.29-6.27c-3.68-3.8-7.55-7.42-11.42-11-6.36-5.92-12.8-11.75-19.24-17.57a50.9,50.9,0,0,0,4.93,3.72,10.69,10.69,0,0,0,3.25,1.55,2.81,2.81,0,0,0,3.58-2.27A4.76,4.76,0,0,0,409.8,607a37.57,37.57,0,0,0-4.13-4.78c-2.58-2.64-5.27-5.16-8-7.67,1.37,1,3.53,2.89,5.42,2.34a3.09,3.09,0,0,0,1.95-3.58,8.27,8.27,0,0,0-1.26-2.77c-2.21-3.44-5.28-6.37-8.18-9.22a2.62,2.62,0,0,0,3.39-3c-.39-1.75-1.91-3.3-3.05-4.58-2.87-3.2-6.06-6.13-9.21-9.05,1.81,1.15,5,2.5,6.17-.22.84-1.91-.9-3.94-2-5.3a102.22,102.22,0,0,0-9.2-9.3c1.77.9,4.05,1.35,5.21-.69s-.48-4.24-1.65-5.79a73.08,73.08,0,0,0-8.08-8.61,3,3,0,0,0,3.12-.29,2.82,2.82,0,0,0,1-2.49c-.17-1.69-1.5-3.21-2.54-4.44a103.23,103.23,0,0,0-8.59-8.66c1.08.55,2.45,1.1,3.63.5a2.89,2.89,0,0,0,1.59-2.77c-.14-1.94-1.87-3.73-3.08-5.08A132.76,132.76,0,0,0,362,501.69c1.39.94,3.2,2.38,5,2.36a2.45,2.45,0,0,0,2.34-2.61c-.1-1.68-1.8-3.12-2.88-4.22-4.56-4.65-9.53-8.92-14.35-13.28,1.86,1.23,3.73,2.47,5.7,3.53a8.15,8.15,0,0,0,3,1.15,2.5,2.5,0,0,0,2.52-2.86,4.57,4.57,0,0,0-1.33-2.2c-1.71-1.88-3.66-3.57-5.54-5.28-3.5-3.17-7-6.28-10.51-9.48,1.82,1,3.63,2.09,5.5,3a11.21,11.21,0,0,0,3.13,1.23,2.42,2.42,0,0,0,2.82-2.6,3.27,3.27,0,0,0-.92-1.85,44.83,44.83,0,0,0-4.12-4.15c-3-2.83-6.05-5.59-9.06-8.4,1.4.42,2.78.88,4.19,1.23a5.57,5.57,0,0,0,2.1.26,2.47,2.47,0,0,0,1.88-2.78,4,4,0,0,0-1-2,37.4,37.4,0,0,0-3.65-3.58c-2.15-2-4.37-3.85-6.52-5.82,1.84-.66,6.17-1.48,5.15-4.44a7.12,7.12,0,0,0-2.23-2.56c-1.46-1.3-3-2.53-4.38-3.91.21-1.6.27-3.23.39-4.84.06-.74.07-1.52.2-2.25a3,3,0,0,0,0-2.09,6.07,6.07,0,0,0-1.4-1.55,2.26,2.26,0,1,0-3.05,3.32c-.19,1.6-.26,3.21-.38,4.82a18.6,18.6,0,0,1-.2,2.11,3.53,3.53,0,0,0-.13,1.61,4.66,4.66,0,0,0,1.38,2c1.17,1.18,2.47,2.25,3.72,3.34-1.88.69-6.38,1.7-4.87,4.73a9.13,9.13,0,0,0,2.08,2.35c1.78,1.68,3.65,3.28,5.48,4.9A38.41,38.41,0,0,0,338,449.9a4.16,4.16,0,0,0-2.16,0c-2,.74-1.78,2.86-.73,4.19a28.28,28.28,0,0,0,2.61,2.75c1.82,1.77,3.68,3.49,5.55,5.21a43.78,43.78,0,0,0-4.16-2.1,6.63,6.63,0,0,0-2.38-.64,2.54,2.54,0,0,0-2.44,2.76,4.23,4.23,0,0,0,.82,2,24.64,24.64,0,0,0,2.86,3.26c1.89,1.9,3.86,3.71,5.83,5.51-1.48-1-3-2-4.51-2.91-1-.58-2.34-1.31-3.53-.77a2.56,2.56,0,0,0-1.23,3.27,7.8,7.8,0,0,0,1.42,2.18,100.58,100.58,0,0,0,9.57,9.35c-1.73-1.28-3.46-2.56-5.24-3.76-1.05-.71-2.39-1.72-3.72-1.65a2.52,2.52,0,0,0-2.05,3.32,6.85,6.85,0,0,0,1.46,2.22,49.17,49.17,0,0,0,3.82,3.82c2.44,2.28,4.95,4.48,7.46,6.69a59.87,59.87,0,0,0-7.31-5.49c-1-.62-2.43-1.4-3.69-1a2.67,2.67,0,0,0-1.34,4,22.86,22.86,0,0,0,4.09,4.53c8.53,8.21,17.65,15.8,26.34,23.84-1-.79-1.91-1.59-2.86-2.39-7.11-6-14-12.21-21.32-18-1.14-.9-2.48-2.11-4-2.39a2.38,2.38,0,0,0-2.68,1.93,2.9,2.9,0,0,0,.46,2.08,15.13,15.13,0,0,0,2.14,2.58c1.5,1.56,3.1,3,4.69,4.5,5.83,5.36,11.81,10.54,17.72,15.81,6.12,5.45,12.28,10.91,18,16.75-4.17-3.44-8.18-7.07-12.17-10.71-7.47-6.82-14.71-14-22.62-20.33a15,15,0,0,0-4.79-3,2.65,2.65,0,0,0-3.42,1.73,4.06,4.06,0,0,0,.92,3.32,34.94,34.94,0,0,0,4.22,4.87c-1.39-.63-3.06-1-4.3.15a2.94,2.94,0,0,0-.77,3.17c.83,2.55,3.14,4.76,4.92,6.66-1.24-.73-2.76-1.37-4-.33a2.82,2.82,0,0,0-.86,3.08,9.15,9.15,0,0,0,1.55,2.6,45.12,45.12,0,0,0,3.53,3.91c-1.18-.55-2.63-1-3.84-.25a3.08,3.08,0,0,0-1.41,3,6.94,6.94,0,0,0,1.12,2.66,28.68,28.68,0,0,0,2.79,3.7,3,3,0,0,0-3.87,3.53c.4,2.1,2,4,3.26,5.68a3.67,3.67,0,0,0-3.41,4.25c.23,2,1.49,3.95,2.63,5.6-2.13.3-2.75,2.49-2,4.24a22.18,22.18,0,0,0,3.74,5.38,3.25,3.25,0,0,0-4.18,3.61c.24,2.1,1.64,4.07,2.82,5.75a3.85,3.85,0,0,0-3,4.17,12.57,12.57,0,0,0,2.36,5.58c-4.51,2-.3,7.07,1.54,9.3a3.7,3.7,0,0,0-3.71,4c.14,2.14,1.57,4.21,2.74,5.91A2.57,2.57,0,0,0,335,616a6.53,6.53,0,0,0,1.13,1.94,73.33,73.33,0,0,0,8.28,8.44,24,24,0,0,0-5.12-3.61,3.25,3.25,0,0,0-3-.17c-2.74,1.52-.85,4.07.52,5.6,4.05,4.55,8.79,8.57,13.29,12.66-2-1.78-4-3.54-6.06-5.21a29,29,0,0,0-4.05-2.9c-1.26-.71-2.81-1.31-4.07-.28a2.54,2.54,0,0,0-.63,3.21,15.86,15.86,0,0,0,2.83,3.34c2.65,2.71,5.43,5.29,8.19,7.88-1.69-1.36-3.4-2.73-5.22-3.92a7.18,7.18,0,0,0-3.56-1.47,2.58,2.58,0,0,0-2.31,3.61,12.52,12.52,0,0,0,3.27,3.76c2.58,2.38,5.28,4.61,7.89,6.94.57.52,1.15,1,1.7,1.58a5.11,5.11,0,0,1,.52.52c.21.28.29.62.5.92a2.27,2.27,0,0,0,3.93-.48c2.21,1.87,4.41,3.75,6.63,5.61a119.3,119.3,0,0,0,10.94,8.61,8.4,8.4,0,0,0,3.79,1.69,2.56,2.56,0,0,0,2.7-2c3.06,2.84,6.14,5.67,9.28,8.42s6.11,5.57,9.71,7.33c1.54.75,3.42,1.12,4.56-.48,2.45,2.3,4.93,4.58,7.46,6.78a64.63,64.63,0,0,0,9.52,7.3c2.07,1.22,5.55,2.82,7.14,0,2.52,2.36,5.06,4.7,7.66,7a70.69,70.69,0,0,0,9.46,7.35,12,12,0,0,0,3.05,1.44,3.07,3.07,0,0,0,3.81-1.63c2.41,2.35,4.83,4.67,7.32,6.94a69.74,69.74,0,0,0,9.25,7.46c2,1.26,5,2.94,6.94.67,2.37,2.26,4.76,4.49,7.22,6.65a63.19,63.19,0,0,0,9.59,7.35c2.26,1.32,6,2.86,7.56-.33a108.21,108.21,0,0,0,10.59,8.88c1.65,1.18,3.84,2.86,6,2.86A2.92,2.92,0,0,0,516.26,752.71ZM338.21,422a2.16,2.16,0,0,1,.41,1.1A2.15,2.15,0,0,0,338.21,422ZM387,596.21c-4.9-4.42-9.79-8.85-14.47-13.14q-3.78-3.78-7.6-7.51c-3.73-3.62-7.5-7.2-11.4-10.63a115.75,115.75,0,0,1-10.29-10.37c3,2.56,5.85,5.23,8.71,7.91C363.81,573.57,375.23,585.08,387,596.21Zm-27.4-56c-4.35-3.94-8.68-7.93-12.26-11.39C351.23,532.26,355.63,536.4,359.63,540.21Zm-9.69,9.92c10.66,9.56,20.86,19.64,31.23,29.51l-9.27-8.26c-5.47-4.89-10.91-9.8-16.28-14.79-4.39-4.08-8.78-8.19-12.84-12.6C345.23,546,347.6,548,349.94,550.13Zm105,126.2c-1.67-1.24-3.28-2.55-4.86-3.89-11.53-9.74-22.17-20.56-32.81-31.24C432.44,654.79,448.11,669,454.89,676.33ZM429,659.52c12.7,11.74,25.39,23.51,37.64,35.73,4.15,4.15,8.28,8.35,12.19,12.74a60,60,0,0,1,5.27,6.51,58.78,58.78,0,0,1-8.14-6.16c-11.4-9.69-21.93-20.44-32.42-31.09-12.82-13-25.45-26.22-38.11-39.4Q417.19,648.67,429,659.52Zm-34.18-17.68q7.82,7.3,15.67,14.57c1.32,1.21,2.65,2.41,3.95,3.65s2.56,2.65,3.83,4l7.55,7.9Q415.6,663,405.44,654.05q-10.29-10.95-19.12-20.13Q390.54,637.9,394.77,641.84Zm-34.23-51.71c-3.78-3.61-7.22-7-10.19-9.93C353.43,583.13,356.87,586.49,360.54,590.13Zm-14.61-5.42c7,6.08,13.65,12.66,20.22,19.24,8.17,8.17,16.2,16.47,24.22,24.79-20.3-20.69-35.22-35-44.3-41.3a70.3,70.3,0,0,1-5.75-7.23A71.27,71.27,0,0,1,345.93,584.71Zm-5.4,4.38a12.12,12.12,0,0,1,2.24,1.42c1.08,1,2,2.25,3,3.33q3.92,4.27,8,8.41a62.36,62.36,0,0,0-10.83-7.75c-2.7-3.38-3.64-5.19-3.93-6.14A10,10,0,0,1,340.53,589.09Zm1.85,11.77c-.48-.55-.92-1.06-1.3-1.53Zm.6,12a24.39,24.39,0,0,1-3.66-5.35,16.86,16.86,0,0,1,3.6,2,86.67,86.67,0,0,1,7.4,5.84c2.79,2.4,5.43,5,8.15,7.48s5.46,5.11,8.12,7.73q7.77,7.68,15.36,15.55c11.13,11.49,22.1,23.14,33.12,34.74q-11.31-10.12-22.65-20.23c-12.95-11.62-25.94-23.27-38.21-35.63C350.32,621.13,346.46,617.15,343,612.87Zm39.39,58c-9.54-8.76-18.82-17.79-28.36-26.56l8.16,7.38c9.34,8.43,18.75,16.83,27.58,25.8C387.26,675.33,384.81,673.11,382.37,670.88Zm27.61,19c-9.6-8.47-18.65-17.58-27.71-26.63-9.31-9.29-18.52-18.68-28-27.8q7.2,6.54,14.44,13c9.16,8.24,18.32,16.48,27.31,24.91,4.48,4.19,8.71,8.64,13.07,12.95,3.55,3.5,7.2,6.92,10.13,11A85.7,85.7,0,0,1,410,689.83Zm51.28,31.31c-8.36-7.37-16.13-15.42-23.88-23.41-9.36-9.66-18.58-19.44-27.83-29.19q7.6,6.78,15.17,13.62c2.12,1.93,4.38,3.78,6.34,5.88l6.18,6.59q5.68,6,11.39,12c6.34,6.66,12.73,13.29,19.27,19.75A56.05,56.05,0,0,1,461.26,721.14ZM471.89,724c-2.32-4.22-8.44-11.64-23.87-26.4q5.78,5.16,11.51,10.38c3.17,2.89,6.32,5.76,9.31,8.83s6.05,6.2,9.1,9.27q3.88,3.93,7.82,7.82c2.31,2.27,4.69,4.5,6.26,7.38C489.67,740.12,484.26,736.17,471.89,724Zm20.18,9.76c-1.07-1.28-2.18-2.53-3.31-3.77-2.83-3.08-5.78-6-8.77-9-4.14-4-8.5-7.9-12.53-12.06,17.63,16.4,33.08,31.09,40.22,39C504.49,745.42,499.58,741.08,492.07,733.79Z" fill="#dee3e6"/>
@@ -277,13 +283,14 @@
   <g
     data-name="00_competence_fields"
     id="_00_competence_fields"
-    data-attr-on-enter="
-      ascreen1:opacity=1
-      ascreen2:opacity=1
-      ascreen3:opacity=0.2
-      ascreen4:opacity=0.2
-      ascreen5:opacity=0.2
-      ascreen6:opacity=0.2
+    data-keyframes="
+      a0:opacity=0
+      a0.133:opacity=1
+      0.266:opacity=1
+      0.4:opacity=0.2
+      0.5333:opacity=0.2
+      0.6666:opacity=0.2
+      0.8:opacity=0.2
     "
   >
     <g>
@@ -333,13 +340,14 @@
   <g
     data-name="00_start"
     id="_00_start"
-    data-attr-on-enter="
-      screen1:opacity=1
-      screen2:opacity=1
-      screen3:opacity=0.2
-      screen4:opacity=0.2
-      screen5:opacity=0.2
-      screen6:opacity=0.2
+    data-keyframes="
+      0:opacity=0
+      0.133:opacity=1
+      0.266:opacity=1
+      0.4:opacity=0.2
+      0.5333:opacity=0.2
+      0.6666:opacity=0.2
+      0.8:opacity=0.2
     "
   >
     <g>
@@ -357,13 +365,14 @@
     id="_06_training"
     data-name="06_training"
     opacity="0"
-    data-attr-on-enter="
-      screen1:opacity=0
-      screen2:opacity=0
-      screen3:opacity=0
-      screen4:opacity=0
-      screen5:opacity=0
-      screen6:opacity=1
+    data-keyframes="
+      0:opacity=0
+      0.133:opacity=0
+      0.266:opacity=0
+      0.4:opacity=0
+      0.5333:opacity=0
+      0.6666:opacity=0
+      0.8:opacity=1
     "
   >
     <g>
