fix clickable areas in approaches

--- a/_includes/pages/approach.html
+++ b/_includes/pages/approach.html
@@ -35,7 +35,7 @@
         </div>
       </div>
     </div>
-    <div class="absolute inset-full col align-center relative zindex-1">
+    <div class="absolute inset-full col align-center relative zindex-1 non-interactive">
       <div class="maxwidth-7 width-full sticky q-md-px-4 pt-8 height-screen">
         <div class="uppercase font-heading font-bold text-blue text-xs lead-line sticky">{{_.slider_lead}}</div>
       </div>
