--- a/_includes/pages/jobs.html
+++ b/_includes/pages/jobs.html
@@ -15,9 +15,55 @@
   </div>
 </div>
 
-<div class="col justify-center align-center px-4 py-8" id="list">
+<div class="col align-center px-4 py-8 sp-6" id="list">
   <div class="font-heading text-xl q-md-text-lg maxwidth-5 width-full">
     {{_.intro_text | markdownify}}
+  </div>
+  <div class="maxwidth-7 width-full">
+    <div class="uppercase font-heading font-bold text-blue text-sm lead-line">{{_.list_title}}</div>
+  </div>
+
+  <div class="width-full maxwidth-5 col sp-2">
+  {%- for job in _.jobs -%}
+    <div class="row align-baseline sp-3 list-entry pb-2">
+      <div class="">{{job.title}}</div>
+      <div class="push"></div>
+      <div class="uppercase text-gray300 text-xs">{{job.location}}</div>
+    </div>
+  {%- endfor -%}
+  </div>
+
+  <div class="width-full maxwidth-5 col sp-4">
+    <div class="">{{_.initiative_text | markdownify}}</div>
+    <div class="col align-center">
+      <a class="button is-black" href="{{_.initiative_button_target}}">{{_.initiative_button_label}}</a>
+    </div>
+  </div>
+
+  <div class="maxwidth-7 width-full col sp-4 pb-7">
+    <div class="uppercase font-heading font-bold text-blue text-sm lead-line">{{_.slider_title}}</div>
+    <div class="carousel">
+      {%- for slide in _.slides -%}
+        <div>
+          <div class="row sp-6 px-5 q-md-col q-md-sp-2 align-start">
+            <div class="no-shrink py-3">
+              <div class="relative">
+                {% asset {{slide.img}} class="rounded-full width-7 height-7" %}
+                {% asset icons/icon-quotes.svg class="absolute height-5 right-0" style="bottom:-1rem;" %}
+              </div>
+            </div>
+            <div class="col sp-3">
+              <div class="text-xl q-md-text-lg q-sm-text-md font-heading">{{slide.quote | markdownify}}</div>
+              <div class="row sp-1 text-sm">
+                <div>{{slide.name}}</div>
+                <div>—</div>
+                <div class="font-bold">{{slide.position}}</div>
+              </div>
+            </div>
+          </div>
+        </div>
+      {%- endfor -%}
+    </div>
   </div>
 </div>
 
