apply prettier to js, fix overflow issue with carousel

--- a/assets/css/_carousel.scss
+++ b/assets/css/_carousel.scss
@@ -19,7 +19,7 @@
   .slick-dots {
     position: absolute;
     left: 9rem;
-    width: 100%;
+    right: 2rem;
     bottom: -2rem;
     display: flex;
     justify-content: start;
