fix flickering of approaches image

--- a/_includes/approach-image.html
+++ b/_includes/approach-image.html
@@ -15,7 +15,8 @@
   "
 >
   <g
-    data-keyframes="
+  opacity="0"
+  data-keyframes="
       0:opacity=0
       0.133:opacity=1
       0.266:opacity=0.2
@@ -51,6 +52,7 @@
   <g
     data-name="04_implementation"
     id="_04_implementation"
+    opacity="0"
     data-keyframes="
       0:opacity=0
       0.133:opacity=1
@@ -109,6 +111,7 @@
   <g
     data-name="03_concept_design"
     id="_03_concept_design"
+    opacity="0"
     data-keyframes="
       0:opacity=0
       0.133:opacity=1
@@ -191,6 +194,7 @@
   <g
     data-name="02_synthesis"
     id="_02_synthesis"
+    opacity="0"
     data-keyframes="
       0:opacity=0
       0.133:opacity=1
@@ -247,6 +251,7 @@
   <g
     data-name="01_comprehensive_view"
     id="_01_comprehensive_view"
+    opacity="0"
     data-keyframes="
       0:opacity=0
       0.133:opacity=1
@@ -283,6 +288,7 @@
   <g
     data-name="00_competence_fields"
     id="_00_competence_fields"
+    opacity="0"
     data-keyframes="
       a0:opacity=0
       a0.133:opacity=1
@@ -340,6 +346,7 @@
   <g
     data-name="00_start"
     id="_00_start"
+    opacity="0"
     data-keyframes="
       0:opacity=0
       0.133:opacity=1
@@ -364,6 +371,7 @@
   <g
     id="_06_training"
     data-name="06_training"
+    opacity="0"
     opacity="0"
     data-keyframes="
       0:opacity=0
