Use non-breaking hyphen for all D-LABS occurences

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
       </div>
     </div>
     <div class="col align-center">
-      <div class="text-xxs">© D-LABS GmbH
+      <div class="text-xxs">© D‑LABS GmbH
         {{ 'now' | date: "%Y" }}</div>
     </div>
   </div>
