--- a/_includes/pages/about.html
+++ b/_includes/pages/about.html
@@ -41,7 +41,7 @@
         <div class="col sp-5">
           <div class="height-10 hide-xl"></div>
           <div class="col">
-            <div>D-LABS GmbH</div>
+            <div>D‑LABS GmbH</div>
             <a class="link-light" href="mailto:info@d-labs.com">info@d-labs.com</a>
           </div>
         </div>
