--- a/_includes/locations.html
+++ b/_includes/locations.html
@@ -11,7 +11,7 @@
     <div class="row sp-8 q-xl-col q-lg-sp-6-parent">
       <div class="col sp-5">
         <div class="col">
-          <div>D-LABS GmbH</div>
+          <div>D‑LABS GmbH</div>
           <a class="{{link_class}}" href="mailto:info@d-labs.com">info@d-labs.com</a>
         </div>
       </div>
