--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,29 +1,31 @@
+{%- assign _ = site.data.includes.footer[page.locale] -%}
+
 <footer class="bg-gray100 col align-center px-4 pt-7 pb-5">
   <div class="maxwidth-7 width-full col sp-5 q-lg-sp-6">
     <div class="row sp-3 align-center q-lg-col q-lg-sp-5">
       <div class="row sp-2 flex-footer-space">
         <a class="button-text " href="/">
-          <img alt="Facebook" class="height-3" src="/assets/images/icons/icon-instagram.svg"/>
+          <img alt="Facebook" class="height-3" src="/assets/images/icons/icon-instagram.svg" />
         </a>
         <a class="button-text " href="/">
-          <img alt="Twitter" class="height-3" src="/assets/images/icons/icon-twitter.svg"/>
+          <img alt="Twitter" class="height-3" src="/assets/images/icons/icon-twitter.svg" />
         </a>
         <a class="button-text " href="/">
-          <img alt="Linkedin" class="height-3" src="/assets/images/icons/icon-linkedin.svg"/>
+          <img alt="Linkedin" class="height-3" src="/assets/images/icons/icon-linkedin.svg" />
         </a>
       </div>
       <div class="push"></div>
       <div class="row sp-6 q-md-sp-3">
         {% for name in site.data.includes.footer.pages %}
-          {% locale_link {{ name }} class:"link text-xs" %}
-          {{site.data.includes.footer[page.locale][name]}}
-          {% endlocale_link %}
+        {% locale_link {{ name }} class:"link text-xs" %}
+        {{_[name]}}
+        {% endlocale_link %}
         {% endfor %}
       </div>
       <div class="push"></div>
       <div class="col sp-2 align-end q-lg-align-center flex-footer-space">
         <a class="button-text" href="/">
-          <img alt="Silicon Sanssouci" class="height-5" src="/assets/images/logo_sisa.svg"/>
+          <img alt="Silicon Sanssouci" class="height-5" src="/assets/images/logo_sisa.svg" />
         </a>
         <div class="text-xxs">
           Mitglied im Silicon Sanssouci e.V.
@@ -36,3 +38,10 @@
     </div>
   </div>
 </footer>
+<div class="fixed inset-x bottom-0 col align-center px-4 py-2 bg-black zindex-5 hidden" id="cookie-consent">
+  <div class="maxwidth-7 width-full row sp-5 q-md-col align-center q-md-sp-1">
+    <div class="text-white text-xs maxwidth-4 markdown">{{_.cookie_consent_text | markdownify}}</div>
+    <div class="push"></div>
+    <button class="button-ghost is-white">{{_.cookie_consent_button_label}}</button>
+  </div>
+</div>
